wp-yaml/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: wordpress
  namespace: wpsix
spec:
  ingressClassName: nginx
  rules:
  - host: wp.gujunhuafu.xyz
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
